--- a/Survie/plugin.yml
+++ b/Survie/plugin.yml
@@ -2,7 +2,7 @@ name: Survie
 author: tiakin69
 version: 0.1
 api-version: 1.18
-main: fr.tiakin.main.main
+main: fr.tiakin.main.Main
 load: STARTUP
 commands:
  save:
