--- a/Survie/plugin.yml
+++ b/Survie/plugin.yml
@@ -5,7 +5,6 @@ api-version: 1.18
 main: fr.tiakin.main.Main
 load: STARTUP
 commands:
- save:
-  description: 'save'
- load:
-  description: 'load'
+ customgive:
+  description: 'give'
+  aliases: [cg, cgive]
